# DiscordReader

./: .htmlhintrc  .pre-commit-config.yaml  .replit  .replit-trade-monitor  DISCORD_PERMISSIONS_GUIDE.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  alembic.ini  api_routes.py  api_routes_update.py  app.py  audit_event_publishing_system.py  build_frontend.sh  check_discord_env.py  clean_duplicate_setups.py  convert_logo.py  daily_ticker_dashboard.py  daily_ticker_dashboard.py.old  db_utils.py.old  debug_parsing_gap.py  debug_simple_gap.py  debug_unparsed_messages.py  debug_validation_fix.py  demo_trade_workflow.py  diagnostic_parsing_dashboard.py  discord_message_fetcher.py  discord_message_history.json  discord_message_stats.py.old  discord_message_storage.py  discord_message_storage.py.old  discord_stats_dashboard.py  discord_stats_dashboard.py.old  event_publisher.py  event_recovery_system.py  event_system_diagnostic.py  flask_streamlit_dashboard.py  force_reparse_remaining_messages.py  full_pipeline_diagnostic.py  generate_sample_discord_data.py  latest_discord_message.json  (+88 more)
.issues/: Issue001_IngestionMetrics
alembic/: README.md  env.py
archive/: ARCHIVE_SUMMARY.md  README.md  legacy_dtos.py
attached_assets/: Pasted--1-Validation-Logic-Consolidation-Problem-Both-service-py-validate-message-and-validator-py-1749579974233_1749579974234.txt  Pasted--1-store-discord-message-Storage-Only-or-Full-Workflow-Recommendation-Keep-it-focused-on-a-1748540758751.txt  (+142 more)
common/: README.md  __init__.py  constants.py  database.py  db.py  db.py.backup  db_models.py  event_compat.py  (+16 more)
(+456 files in other folders)
