[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.40.0",
    "cairosvg>=2.8.2",
    "discord-py>=2.5.2",
    "email-validator>=2.2.0",
    "flask-limiter>=3.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "flask-socketio>=5.5.1",
    "trafilatura>=2.0.0",
    "plotly>=6.1.0",
    "pytz>=2025.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "alembic>=1.16.1",
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "schedule>=1.2.2",
    "pytest-asyncio>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "asyncpg>=0.30.0",
]
